--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-	"id": "share-note",
-	"name": "Share Note",
-	"version": "0.8.17",
-	"minAppVersion": "0.15.0",
-	"description": "Instantly share a note, with the full theme and content exactly like you see in Reading View. Data is shared encrypted by default, and only you and the person you send it to have the key.",
-	"author": "Alan Grainger",
-	"authorUrl": "https://github.com/alangrainger",
-	"fundingUrl": "https://ko-fi.com/alan_",
-	"isDesktopOnly": false
+  "id": "send-note",
+  "name": "Send Note",
+  "version": "0.1.0",
+  "minAppVersion": "0.15.0",
+  "description": "Instantly send a note, to other obsidian users so they can import them into their vault. It uses free pastebin API as a storage backend. Data is shared encrypted by default, and only you and the person you send it to have the key.",
+  "author": "Jamie Steiner",
+  "authorUrl": "https://github.com/jvsteiner",
+  "fundingUrl": "https://ko-fi.com/alan_",
+  "isDesktopOnly": false
 }
