--- a/package.json
+++ b/package.json
@@ -16,16 +16,20 @@
 		"@types/node": "^16.11.6",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
+		"browser-image-compression": "^2.0.2",
 		"builtin-modules": "3.3.0",
 		"esbuild": "0.17.3",
 		"eslint": "^8.49.0",
 		"eslint-config-standard": "^17.1.0",
 		"obsidian": "latest",
 		"tslib": "2.4.0",
-		"typescript": "4.7.4",
-		"browser-image-compression": "^2.0.2"
+		"typescript": "4.7.4"
 	},
 	"dependencies": {
+		"@aws-sdk/client-s3": "^3.693.0",
+		"@aws-sdk/protocol-http": "^3.370.0",
+		"@aws-sdk/querystring-builder": "^3.370.0",
+		"@smithy/fetch-http-handler": "^4.1.1",
 		"csso": "^5.0.5",
 		"data-uri-to-buffer": "^6.0.1"
 	}
